RESOLVED FIXED78061
Plumb through webGLErrorsToConsoleEnable in WebSettings
https://bugs.webkit.org/show_bug.cgi?id=78061
Summary Plumb through webGLErrorsToConsoleEnable in WebSettings
Gregg Tavares
Reported 2012-02-07 17:37:19 PST
Plum through webGLErrorsToConsoleEnable in WebSettings
Attachments
Patch (2.93 KB, patch)
2012-02-07 17:38 PST, Gregg Tavares
no flags
Patch (2.93 KB, patch)
2012-02-07 18:16 PST, Gregg Tavares
no flags
Gregg Tavares
Comment 1 2012-02-07 17:38:19 PST
WebKit Review Bot
Comment 2 2012-02-07 17:42:47 PST
Please wait for approval from fishd@chromium.org before submitting because this patch contains changes to the Chromium public API.
Kenneth Russell
Comment 3 2012-02-07 18:11:17 PST
Comment on attachment 125966 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=125966&action=review Looks fine to me. I can't imagine this being contentious and fishd's on vacation so I'm r+'ing it. > Source/WebKit/chromium/ChangeLog:3 > + Plum through webGLErrorsToConsoleEnable in WebSettings Minor nit: plum -> plumb everywhere.
Gregg Tavares
Comment 4 2012-02-07 18:16:11 PST
Kenneth Russell
Comment 5 2012-02-07 18:17:32 PST
Comment on attachment 125973 [details] Patch Looks good. r=me again
WebKit Review Bot
Comment 6 2012-02-07 21:34:25 PST
Comment on attachment 125973 [details] Patch Clearing flags on attachment: 125973 Committed r107037: <http://trac.webkit.org/changeset/107037>
WebKit Review Bot
Comment 7 2012-02-07 21:34:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.