Plumb through webGLErrorsToConsoleEnable in WebSettings https://bugs.webkit.org/show_bug.cgi?id=78061

Patch by Gregg Tavares <gman@google.com> on 2012-02-07
Reviewed by Kenneth Russell.

* public/WebSettings.h:
* src/WebSettingsImpl.cpp:
(WebKit::WebSettingsImpl::setWebGLErrorsToConsoleEnabled):
(WebKit):
* src/WebSettingsImpl.h:
(WebSettingsImpl):

Canonical link: https://commits.webkit.org/94949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107037 268f45cc-cd09-0410-ab3c-d52691b4dbfc