Source/WebKit/chromium/public/WebSettings.h
@@ -98,6 +98,7 @@ public:
     virtual void setExperimentalWebGLEnabled(bool) = 0;
     virtual void setOpenGLMultisamplingEnabled(bool) = 0;
     virtual void setPrivilegedWebGLExtensionsEnabled(bool) = 0;
+    virtual void setWebGLErrorsToConsoleEnabled(bool) = 0;
     virtual void setShowDebugBorders(bool) = 0;
     virtual void setShowFPSCounter(bool) = 0;
     virtual bool showFPSCounter() const = 0;
