Source/WebKit/chromium/src/WebSettingsImpl.h
@@ -90,6 +90,7 @@ public:
     virtual void setExperimentalWebGLEnabled(bool);
     virtual void setOpenGLMultisamplingEnabled(bool);
     virtual void setPrivilegedWebGLExtensionsEnabled(bool);
+    virtual void setWebGLErrorsToConsoleEnabled(bool);
     virtual void setShowDebugBorders(bool);
     virtual void setShowFPSCounter(bool);
     virtual bool showFPSCounter() const { return m_showFPSCounter; }
